--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,10 @@ server.port=2220
 
 #spring datasource properties
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://root:tSNylxMSSafCtsskvHtdSiRwxgBgZagR@autorack.proxy.rlwy.net:57329/railway
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://root:CRFbUIAHGTAIvuzucmLBlkZoHFCvTPwY@autorack.proxy.rlwy.net:23640/railway
 spring.datasource.username=root
-spring.datasource.password=tSNylxMSSafCtsskvHtdSiRwxgBgZagR
+spring.datasource.password=CRFbUIAHGTAIvuzucmLBlkZoHFCvTPwY
 
 #spring hibernate jpa properties
 
